# ai-expense-risk-reviewer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-demo.txt  requirements.txt  run.py  serve.py
.claude/skills/agent-orchestration/: SKILL.md
.claude/skills/analysis-pipeline/: SKILL.md
.claude/skills/data-contracts/: SKILL.md
.claude/skills/governance-independence/: SKILL.md
.claude/skills/onboarding-explainer/: SKILL.md
.claude/skills/rule-authoring/: SKILL.md
.claude/skills/security-and-privacy/: SKILL.md
config/: engagement.yaml
config/rules/: fraud_scenarios.yaml  rule_catalog.yaml
config/schemas/: data_contracts.json
docs/: agent-design.md  architecture.md  governance.md  security-privacy.md  spec-improvements.md
docs/demo/: README.md
samples/synthetic/: expense_lines.json  labels.json  masters.json
scripts/: make_demo.py  shots.py
src/expense_risk/: __init__.py  cli.py  config.py  contracts.py  demo_data.py  etl.py  features.py  governance.py  paths.py  pipeline.py  report.py  scoring.py  synthetic.py  util.py
src/expense_risk/agent/: __init__.py  connectors.py  injection.py  orchestrator.py
src/expense_risk/audit/: __init__.py  log.py
src/expense_risk/ml/: __init__.py  anomaly.py
src/expense_risk/rules/: __init__.py  engine.py  evaluators.py
tests/: conftest.py  test_agent.py  test_audit.py  test_config.py  test_contracts.py  test_etl_features.py  test_governance.py  test_injection_connectors.py  test_ml_scoring.py  test_pipeline.py  test_report.py  test_robustness.py  test_rules.py  test_webapp.py
(+5 files in other folders)
